--- a/frontend/src/Components/ProductContainer.module.css
+++ b/frontend/src/Components/ProductContainer.module.css
@@ -11,6 +11,7 @@
     font-weight: bold;
     text-align: center;
     margin-bottom: 15px;
+    position: relative;
 }
 
 .productDetails {
